# HOTEL-API-demo

./: .gitignore  Cargo.toml  GUION_ENTREVISTA.md  README.md  errors.txt
kernel/: README.md  adaptedkernel.rs  kernelSafe.rs
migrations/: 20240204000001_create_hotels.sql  20240204000002_create_bookings.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: bookings.rs  hotels.rs  mod.rs
src/models/: booking.rs  hotel.rs  mod.rs
